--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
         "ecmaVersion": 12
     },
     "rules": {
+        "allowForLoopAfterthoughts": true,
         "indent": ["error", 4]
     }
 }
